settings added to emr

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "db:gen": "npx drizzle-kit generate",
     "db:mig": "npx drizzle-kit migrate",
     "studio": "npx drizzle-kit studio",
-    "seed": "ts-node seedData.ts",
+    "seed:user": "ts-node seedData.ts",
+    "seed:settings": "ts-node seedSettings.ts",
+    "seed:billing": "ts-node seedBilling.ts",
     "dev": "nodemon src/index.ts",
     "start": "ts-node src/index.ts",
     "vercel-build": "echo hello"
