--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "seed:billing": "ts-node seedBilling.ts",
     "dev": "nodemon src/index.ts",
     "start": "ts-node src/index.ts",
-    "vercel-build": "echo hello"
+    "vercel-build": "tsc"
   },
   "keywords": [],
   "author": "",
